# mofeed-his

./: README.md
mofeed_his/: MANIFEST.in  README.md  __init__.py  hooks.py  license.txt  modules.txt  patches.txt  pyproject.toml  requirements.txt  setup.py
mofeed_his/config/: __init__.py  desktop.py  docs.py  mofeed_his.py
mofeed_his/mofeed_his/: __init__.py  hooks.py
mofeed_his/mofeed_his/doctype/: __init__.py
mofeed_his/mofeed_his/doctype/clinic/: __init__.py  clinic.js  clinic.json  clinic.py  test_clinic.py
mofeed_his/mofeed_his/doctype/clinic_service/: __init__.py  clinic_service.json  clinic_service.py
mofeed_his/mofeed_his/doctype/hospital/: __init__.py  hospital.json  hospital.py  test_hospital.py
mofeed_his/mofeed_his/doctype/mrn_sequence/: __init__.py  mrn_sequence.json  mrn_sequence.py
mofeed_his/mofeed_his/doctype/patient_extension/: __init__.py  patient_extension.json  patient_extension.py  test_patient_extension.py
mofeed_his/mofeed_his/fixtures/: custom_field.json
mofeed_his/mofeed_his/public/css/: mofeed_his.css  mofeed_login.css
mofeed_his/mofeed_his/public/js/: mofeed_his.js
mofeed_his/mofeed_his/reception_console/: __init__.py
mofeed_his/mofeed_his/tests/: __init__.py  test_mrn.py
mofeed_his/mofeed_his/utils/: __init__.py  mrn.py
mofeed_his/patches/: __init__.py
mofeed_his/public/css/: mofeed_his.css  mofeed_login.css
mofeed_his/public/js/: mofeed_his.js  mofeed_login.js
mofeed_his/templates/: __init__.py
mofeed_his/templates/pages/: login.html  mofeed_login.html  mofeed_login.py
mofeed_his/www/: mofeed_login.py
(+25 files in other folders)
