[project]
name = "mofeed_his"
authors = [
    { name = "Al-Mofeed HIS Team", email = "info@mofeed-his.com"}
]
description = "Al-Mofeed Hospital Information System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
framework-version = 14
